[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/hud/control-icons.png" type="Texture" id=1]
[ext_resource path="res://ui/hud/input-preview/InputPreview.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "inputs_changed"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Wrapper:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="InputPreview" type="Node2D"]
position = Vector2( 0, 40 )
script = ExtResource( 2 )

[node name="Wrapper" type="Node2D" parent="."]

[node name="MoveLeft" type="Node2D" parent="Wrapper"]
position = Vector2( -24, 0 )

[node name="Action" type="Sprite" parent="Wrapper/MoveLeft"]
texture = ExtResource( 1 )
vframes = 2
hframes = 8

[node name="Input" type="Sprite" parent="Wrapper/MoveLeft"]
position = Vector2( -16, 0 )
texture = ExtResource( 1 )
vframes = 2
hframes = 8
frame = 8

[node name="MoveRight" type="Node2D" parent="Wrapper"]
position = Vector2( 24, 0 )

[node name="Action" type="Sprite" parent="Wrapper/MoveRight"]
texture = ExtResource( 1 )
vframes = 2
hframes = 8
frame = 1

[node name="Input" type="Sprite" parent="Wrapper/MoveRight"]
position = Vector2( 16, 0 )
texture = ExtResource( 1 )
vframes = 2
hframes = 8
frame = 9

[node name="Jump" type="Node2D" parent="Wrapper"]
position = Vector2( 0, -24 )

[node name="Action" type="Sprite" parent="Wrapper/Jump"]
texture = ExtResource( 1 )
vframes = 2
hframes = 8
frame = 2

[node name="Input" type="Sprite" parent="Wrapper/Jump"]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
vframes = 2
hframes = 8
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/inputs_changed = SubResource( 1 )
